Bug 40664 - glean vertArrayBGRA regression
Summary: glean vertArrayBGRA regression
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Dave Airlie
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-06 17:53 UTC by Vinson Lee
Modified: 2011-09-07 12:50 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2011-09-06 17:53:06 UTC
mesa: 23eec54bb0f368d9c88894b544b4af8f01cae2ae (master)

$ /bin/glean -r results -t vertArrayBGRA --quick
vertArrayBGRA: Error: glColorPointer(size=GL_BGRA, type=GL_FLOAT) did not generate expected error.
vertArrayBGRA:  FAIL rgb8, db, z16, s8, accrgba16, win+pmap, id 33
Comment 1 Vinson Lee 2011-09-06 18:19:29 UTC
6cd2d55a7bee289f20670cb97258d73911dac781 is the first bad commit
commit 6cd2d55a7bee289f20670cb97258d73911dac781
Author: Dave Airlie <airlied@redhat.com>
Date:   Sat Aug 13 15:30:38 2011 +0100

    mesa/varray: add interface support for ARB_vertex_type_2_10_10_10_rev (v2)
    
    This just adds all the API check for vertex arrays using 2101010 types.
    
    2101010 is also useable with GL_BGRA.
    
    v2: fix whitespace.
    
    Signed-off-by: Dave Airlie <airlied@redhat.com>
    Reviewed-by: Eric Anholt <eric@anholt.net>

:040000 040000 cb68091fc2db84b89983e1c4e6a73aa1cb914b90 91b21e6b955f2207e5800ae398389907e9ba3786 M	src
bisect run success
Comment 2 Vinson Lee 2011-09-06 21:01:29 UTC
Regression occurs with i965 as well.
Comment 3 Dave Airlie 2011-09-07 02:22:08 UTC
should be fixed in master by

http://cgit.freedesktop.org/mesa/mesa/commit/?id=99c1a58b3067893d4fa444cd4abcf13bb43232ef
Comment 4 Vinson Lee 2011-09-07 12:50:21 UTC
mesa: 4bc5bfb641bce931bf35f0e78ec2b44263d152ba (master)

glean vertArrayBGRA passes with swrast.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.